# cmake

./: BarcodeReader  BarcodeReader.cxx  CMakeLists.txt
